(RST-6698) Attempt to use pdftk/pdftk image